--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -76,6 +76,7 @@
     <string name="internal">Internal</string>
     <string name="sd_card">SD Card</string>
     <string name="root">Root</string>
+    <string name="wrong_root_selected">Wrong folder selected, please select the SD card</string>
 
     <!-- File properties -->
     <string name="properties">Properties</string>
