--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -76,6 +76,7 @@
     <string name="internal">内部</string>
     <string name="sd_card">SD カード</string>
     <string name="root">ルート</string>
+    <string name="wrong_root_selected">Wrong folder selected, please select the SD card</string>
 
     <!-- File properties -->
     <string name="properties">プロパティ</string>
