--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -76,6 +76,7 @@
     <string name="internal">Wewnetrzna</string>
     <string name="sd_card">Karta SD</string>
     <string name="root">Root</string>
+    <string name="wrong_root_selected">Wrong folder selected, please select the SD card</string>
 
     <!-- File properties -->
     <string name="properties">Właściwości</string>
