--- a/commons/src/main/res/values-pt-rPT/strings.xml
+++ b/commons/src/main/res/values-pt-rPT/strings.xml
@@ -76,6 +76,7 @@
     <string name="internal">Interno</string>
     <string name="sd_card">Cartão SD</string>
     <string name="root">Raiz</string>
+    <string name="wrong_root_selected">Wrong folder selected, please select the SD card</string>
 
     <!-- File properties -->
     <string name="properties">Propriedades</string>
