--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -76,6 +76,7 @@
     <string name="internal">Внутренняя память</string>
     <string name="sd_card">SD-карта</string>
     <string name="root">Корневая папка</string>
+    <string name="wrong_root_selected">Wrong folder selected, please select the SD card</string>
 
     <!-- File properties -->
     <string name="properties">Свойства</string>
