--- a/commons/src/main/res/values-gl-rES/strings.xml
+++ b/commons/src/main/res/values-gl-rES/strings.xml
@@ -76,6 +76,7 @@
     <string name="internal">Almacenamiento interno</string>
     <string name="sd_card">Tarjeta SD</string>
     <string name="root">Raíz /</string>
+    <string name="wrong_root_selected">Wrong folder selected, please select the SD card</string>
 
     <!-- File properties -->
     <string name="properties">Propiedades</string>
