--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -77,6 +77,7 @@
     <string name="internal">Interné</string>
     <string name="sd_card">SD karta</string>
     <string name="root">Koreňový priečinok</string>
+    <string name="wrong_root_selected">Bol zvolený nesprávny koreňový priečinok, prosím zvoľte SD kartu</string>
 
     <!-- File properties -->
     <string name="properties">Vlastnosti</string>
