--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -76,6 +76,7 @@
     <string name="internal">Internt</string>
     <string name="sd_card">SD-kort</string>
     <string name="root">Rot</string>
+    <string name="wrong_root_selected">Wrong folder selected, please select the SD card</string>
 
     <!-- File properties -->
     <string name="properties">Egenskaper</string>
