--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -76,6 +76,7 @@
     <string name="internal">Dahili</string>
     <string name="sd_card">SD Kart</string>
     <string name="root">Kök</string>
+    <string name="wrong_root_selected">Wrong folder selected, please select the SD card</string>
 
     <!-- File properties -->
     <string name="properties">Özellikleri</string>
