--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -5,7 +5,7 @@
     <string name="save_as">Spara som</string>
     <string name="file_saved">Filen sparad</string>
     <string name="invalid_file_format">Invalid file format</string>
-    <string name="no_permissions">We need the permission to access your storage</string>
+    <string name="no_storage_permissions">We need the permission to access your storage</string>
 
     <!-- Renaming -->
     <string name="rename_file">Döp om fil</string>
