--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -5,7 +5,7 @@
     <string name="save_as">Salva come </string>
     <string name="file_saved">File salvato correttamente</string>
     <string name="invalid_file_format">Invalid file format</string>
-    <string name="no_permissions">We need the permission to access your storage</string>
+    <string name="no_storage_permissions">We need the permission to access your storage</string>
 
     <!-- Renaming -->
     <string name="rename_file">Rinomina file</string>
