--- a/commons/src/main/res/values-pt-rPT/strings.xml
+++ b/commons/src/main/res/values-pt-rPT/strings.xml
@@ -5,7 +5,7 @@
     <string name="save_as">Guardar como</string>
     <string name="file_saved">Ficheiro guardado com sucesso</string>
     <string name="invalid_file_format">Invalid file format</string>
-    <string name="no_permissions">We need the permission to access your storage</string>
+    <string name="no_storage_permissions">We need the permission to access your storage</string>
 
     <!-- Renaming -->
     <string name="rename_file">Renomear ficheiro</string>
