--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -5,7 +5,7 @@
     <string name="save_as">Сохранить как</string>
     <string name="file_saved">Файл успешно сохранен</string>
     <string name="invalid_file_format">Invalid file format</string>
-    <string name="no_permissions">We need the permission to access your storage</string>
+    <string name="no_storage_permissions">We need the permission to access your storage</string>
 
     <!-- Renaming -->
     <string name="rename_file">Изменение имени файла</string>
