--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -76,7 +76,7 @@
     <string name="internal">Intern</string>
     <string name="sd_card">SD Karte</string>
     <string name="root">Hauptverzeichnis</string>
-    <string name="wrong_root_selected">Wrong folder selected, please select the SD card</string>
+    <string name="wrong_root_selected">Wrong folder selected, please select the root folder of your SD card</string>
 
     <!-- File properties -->
     <string name="properties">Eigenschaften</string>
