--- a/commons/src/main/res/values-es-rES/strings.xml
+++ b/commons/src/main/res/values-es-rES/strings.xml
@@ -76,7 +76,7 @@
     <string name="internal">Almacenamiento interno</string>
     <string name="sd_card">Tarjeta SD</string>
     <string name="root">Raíz /</string>
-    <string name="wrong_root_selected">Wrong folder selected, please select the SD card</string>
+    <string name="wrong_root_selected">Wrong folder selected, please select the root folder of your SD card</string>
 
     <!-- File properties -->
     <string name="properties">Propiedades</string>
