--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -76,7 +76,7 @@
     <string name="internal">Interno</string>
     <string name="sd_card">Scheda SD</string>
     <string name="root">Root</string>
-    <string name="wrong_root_selected">Wrong folder selected, please select the SD card</string>
+    <string name="wrong_root_selected">Wrong folder selected, please select the root folder of your SD card</string>
 
     <!-- File properties -->
     <string name="properties">Proprietà</string>
