add Picasso license

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -162,6 +162,7 @@
     <string name="kotlin_title">Kotlin (Programmiersprache)</string>
     <string name="subsampling_title">Subsampling Scale Image View (Zoombare Bilder)</string>
     <string name="glide_title">Glide (Bilder laden und zwischenspeichern)</string>
+    <string name="picasso_title">Picasso (Bilder laden und zwischenspeichern)</string>
     <string name="cropper_title">Android Image Cropper (Bilder zuschneiden und rotieren)</string>
     <string name="multiselect_title">RecyclerView MultiSelect (Mehrfachauswahl in Listen)</string>
     <string name="rtl_viewpager_title">RtlViewPager (right to left swiping)</string>
