--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -162,6 +162,7 @@
     <string name="kotlin_title">Kotlin (langage de programmation)</string>
     <string name="subsampling_title">Subsampling Scale Image View (imageviews zoomables)</string>
     <string name="glide_title">Glide (chargement et mise en cache d\'image)</string>
+    <string name="picasso_title">Picasso (chargement et mise en cache d\'image)</string>
     <string name="cropper_title">Android Image Cropper (découpe et rotation d\'image)</string>
     <string name="multiselect_title">RecyclerView MultiSelect (sélection de multiples éléments de liste)</string>
     <string name="rtl_viewpager_title">RtlViewPager (right to left swiping)</string>
