--- a/commons/src/main/res/values-pt-rPT/strings.xml
+++ b/commons/src/main/res/values-pt-rPT/strings.xml
@@ -162,6 +162,7 @@
     <string name="kotlin_title">Kotlin (linguagem de programação)</string>
     <string name="subsampling_title">Subsampling Scale Image View (ampliação de imagens)</string>
     <string name="glide_title">Glide (carregamento e cache de imagens)</string>
+    <string name="picasso_title">Picasso (carregamento e cache de imagens)</string>
     <string name="cropper_title">Android Image Cropper (recorte e rotação de imagens)</string>
     <string name="multiselect_title">RecyclerView MultiSelect (seleção múltipla de itens)</string>
     <string name="rtl_viewpager_title">RtlViewPager (deslizar à direita/esquerda)</string>
