--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -162,6 +162,7 @@
     <string name="kotlin_title">Kotlin (язык программирования)</string>
     <string name="subsampling_title">Subsampling Scale Image View (возможность масштабирования изображений)</string>
     <string name="glide_title">Glide (загрузка изображения и кэширование)</string>
+    <string name="picasso_title">Picasso (загрузка изображения и кэширование)</string>
     <string name="cropper_title">Android Image Cropper (обрезка и поворот изображений)</string>
     <string name="multiselect_title">RecyclerView MultiSelect (выбор нескольких элементов списка)</string>
     <string name="rtl_viewpager_title">RtlViewPager (отображение с RTL языками)</string>
