--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -163,6 +163,7 @@
     <string name="kotlin_title">Kotlin (programovací jazyk)</string>
     <string name="subsampling_title">Subsampling Scale Image View (priblížiteľné obrázky)</string>
     <string name="glide_title">Glide (načítavanie a cachovanie obrázkov)</string>
+    <string name="picasso_title">Picasso (načítavanie a cachovanie obrázkov)</string>
     <string name="cropper_title">Android Image Cropper (orezávanie a otáčanie obrázkov)</string>
     <string name="multiselect_title">RecyclerView MultiSelect (označovanie viacerých položiek zo zoznamu)</string>
     <string name="rtl_viewpager_title">RtlViewPager (swipovanie sprava vľavo)</string>
