--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -162,6 +162,7 @@
     <string name="kotlin_title">Kotlin (programlama dili)</string>
     <string name="subsampling_title">Alt Örnekleme Ölçek Görüntüsü Görünümü (yakınlaştırılabilir görüntü görünümleri)</string>
     <string name="glide_title">Kayma (resim yükleme ve önbellekleme)</string>
+    <string name="picasso_title">Picasso (resim yükleme ve önbellekleme)</string>
     <string name="cropper_title">Android Görübtü Kesme (resim kırpma ve döndürme)</string>
     <string name="multiselect_title">Recyclergörünümü Çoklu seçim (birden çok liste öğesinin seçilmesi)</string>
     <string name="rtl_viewpager_title">RtlViewPager (sağdan sola hızlıca kaydırma)</string>
