--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -162,6 +162,7 @@
     <string name="kotlin_title">Kotlin (linguaggio di programmazione)</string>
     <string name="subsampling_title">PhotoView (immagini ingrandibili)</string>
     <string name="glide_title">Glide (caricamento e caching immagini)</string>
+    <string name="picasso_title">Picasso (caricamento e caching immagini)</string>
     <string name="cropper_title">Android Image Cropper (ritaglio e rotazione immagini)</string>
     <string name="multiselect_title">RecyclerView MultiSelect (selezione elementi multipli da liste)</string>
     <string name="rtl_viewpager_title">RtlViewPager (right to left swiping)</string>
