--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -162,6 +162,7 @@
     <string name="kotlin_title">Kotlin (プログラミング言語)</string>
     <string name="subsampling_title">Subsampling Scale Image View (ズーム可能画像ビュー)</string>
     <string name="glide_title">Glide (画像ローディングとキャッシング)</string>
+    <string name="picasso_title">Picasso (画像ローディングとキャッシング)</string>
     <string name="cropper_title">Android Image Cropper (画像のトリミングと回転)</string>
     <string name="multiselect_title">RecyclerView MultiSelect (複数選択リストアイテム)</string>
     <string name="rtl_viewpager_title">RtlViewPager (right to left swiping)</string>
