--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -5,7 +5,7 @@
     <string name="save_as">Salva come </string>
     <string name="file_saved">File salvato correttamente</string>
     <string name="invalid_file_format">Formato file non valido</string>
-    <string name="no_storage_permissions">È necessaria l'autorizzazione per l\'accesso all\'archiviazione</string>
+    <string name="no_storage_permissions">È necessaria l\'autorizzazione per l\'accesso all\'archiviazione</string>
 
     <!-- Renaming -->
     <string name="rename_file">Rinomina file</string>
