--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -53,7 +53,7 @@
     <string name="unknown_error_occurred">Ett okänt fel har uppstått</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Filen $%1s finns redan</string>
+    <string name="file_already_exists">Filen %1$s finns redan</string>
     <string name="select_an_action">Välj en åtgärd</string>
     <string name="overwrite">Skriv över</string>
     <string name="skip">Hoppa över</string>
