--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -53,7 +53,7 @@
     <string name="unknown_error_occurred">Ocurrió un error desconocido</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">El archivo $%1s ya existe</string>
+    <string name="file_already_exists">El archivo %1$s ya existe</string>
     <string name="select_an_action">Elige una opción</string>
     <string name="overwrite">Sobreescribir</string>
     <string name="skip">Saltar</string>
