--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -53,7 +53,7 @@
     <string name="unknown_error_occurred">Une erreur inconnue est survenue.</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Le fichier $%1s existe déjà</string>
+    <string name="file_already_exists">Le fichier %1$s existe déjà</string>
     <string name="select_an_action">Sélectionner une action</string>
     <string name="overwrite">Ecraser</string>
     <string name="skip">Passer</string>
