--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -53,7 +53,7 @@
     <string name="unknown_error_occurred">Riscontrato un errore sconosciuto</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Il file $%1s esiste già</string>
+    <string name="file_already_exists">Il file %1$s esiste già</string>
     <string name="select_an_action">Seleziona un\'azione</string>
     <string name="overwrite">Sovrascrivi</string>
     <string name="skip">Salta</string>
