--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -53,7 +53,7 @@
     <string name="unknown_error_occurred">Wystąpił nieznany błąd</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Plik $%1s już istnieje</string>
+    <string name="file_already_exists">Plik %1$s już istnieje</string>
     <string name="select_an_action">Wybierz</string>
     <string name="overwrite">Nadpisz</string>
     <string name="skip">Pomiń</string>
