--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -53,7 +53,7 @@
     <string name="unknown_error_occurred">Ocorreu um erro desconhecido</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Já existe um ficheiro com o nome $%1s</string>
+    <string name="file_already_exists">Já existe um ficheiro com o nome %1$s</string>
     <string name="select_an_action">Selecione uma ação</string>
     <string name="overwrite">Substituir</string>
     <string name="skip">Ignorar</string>
