--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -53,7 +53,7 @@
     <string name="unknown_error_occurred">Došlo k neznámej chybe</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Súbor $%1s už existuje</string>
+    <string name="file_already_exists">Súbor %1$s už existuje</string>
     <string name="select_an_action">Zvoľte operáciu</string>
     <string name="overwrite">Prepísať</string>
     <string name="skip">PreskočiŤ</string>
