--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -53,7 +53,7 @@
     <string name="unknown_error_occurred">Bilinmeyen bir hata oluştu</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Dosya $%1s zaten mevcut</string>
+    <string name="file_already_exists">Dosya %1$s zaten mevcut</string>
     <string name="select_an_action">Bir eylem seçin</string>
     <string name="overwrite">Üzerine yaz</string>
     <string name="skip">Atla</string>
