--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -2,23 +2,23 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancelar</string>
     <string name="search">Pesquisar</string>
-    <string name="save_as">Guardar como</string>
-    <string name="file_saved">Ficheiro guardado com sucesso</string>
-    <string name="invalid_file_format">Formato de ficheiro inválido</string>
-    <string name="no_storage_permissions">Necessitamos de permissão para aceder ao armazenamento</string>
+    <string name="save_as">Salvar como</string>
+    <string name="file_saved">Arquivo salvo com sucesso</string>
+    <string name="invalid_file_format">Formato de arquivo inválido</string>
+    <string name="no_storage_permissions">Necessitamos de permissão para acessar o armazenamento</string>
 
     <!-- Renaming -->
-    <string name="rename_file">Renomear ficheiro</string>
+    <string name="rename_file">Renomear arquivo</string>
     <string name="rename_folder">Renomear pasta</string>
-    <string name="rename_file_error">Não foi possível renomear o ficheiro</string>
+    <string name="rename_file_error">Não foi possível renomear o arquivo</string>
     <string name="rename_folder_error">Não foi possível renomear a pasta</string>
     <string name="rename_folder_empty">O nome da pasta não pode estar vazio</string>
     <string name="rename_folder_exists">Já existe uma pasta com este nome</string>
-    <string name="rename_folder_root">Não pode renomear a pasta raiz de um armazenamento</string>
+    <string name="rename_folder_root">Não se pode renomear a pasta raíz de um armazenamento</string>
     <string name="rename_folder_ok">A pasta foi renomeada com sucesso</string>
     <string name="renaming_folder">A renomear pasta</string>
-    <string name="filename_cannot_be_empty">O nome do ficheiro não pode estar vazio</string>
-    <string name="filename_invalid_characters">O nome do ficheiro contém caracteres inválidos</string>
+    <string name="filename_cannot_be_empty">O nome do arquivo não pode estar vazio</string>
+    <string name="filename_invalid_characters">O nome do arquivo contém caracteres inválidos</string>
     <string name="extension_cannot_be_empty">A extensão não pode estar vazia</string>
 
     <!-- Copy / Move -->
@@ -32,28 +32,28 @@
     <string name="invalid_destination">Não foi possível escrever no destino selecionado</string>
     <string name="please_select_destination">Por favor selecione um destino</string>
     <string name="source_and_destination_same">A origem e o destino não podem ser iguais</string>
-    <string name="copy_failed">Não foi possível copiar os ficheiros</string>
+    <string name="copy_failed">Não foi possível copiar os arquivos</string>
     <string name="copying">A copiar&#8230;</string>
-    <string name="copying_success">Ficheiros copiados com sucesso</string>
+    <string name="copying_success">Arquivos copiados com sucesso</string>
     <string name="copy_move_failed">Ocorreu um erro ao copiar</string>
     <string name="moving">A mover&#8230;</string>
-    <string name="moving_success">Ficheiros movidos com sucesso</string>
-    <string name="moving_success_partial">Alguns ficheiros não foram movidos</string>
-    <string name="copying_success_partial">Alguns ficheiros não foram copiados</string>
-    <string name="no_files_selected">Nenhum ficheiro selecionado</string>
+    <string name="moving_success">Arquivos movidos com sucesso</string>
+    <string name="moving_success_partial">Alguns arquivos não foram movidos</string>
+    <string name="copying_success_partial">Alguns arquivos não foram copiados</string>
+    <string name="no_files_selected">Nenhum arquivo selecionado</string>
 
     <!-- Create new -->
     <string name="create_new">Criar</string>
     <string name="folder">Pasta</string>
-    <string name="file">Ficheiro</string>
+    <string name="file">Arquivo</string>
     <string name="create_new_folder">Criar nova pasta</string>
-    <string name="name_taken">Já existe um ficheiro ou pasta com este nome</string>
+    <string name="name_taken">Já existe um arquivo ou pasta com este nome</string>
     <string name="invalid_name">O nome contém caracteres inválidos</string>
     <string name="empty_name">Digite um nome</string>
     <string name="unknown_error_occurred">Ocorreu um erro desconhecido</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Já existe um ficheiro com o nome %1$s</string>
+    <string name="file_already_exists">Já existe um arquivo com o nome %1$s</string>
     <string name="select_an_action">Selecione uma ação</string>
     <string name="overwrite">Substituir</string>
     <string name="skip">Ignorar</string>
@@ -62,28 +62,28 @@
 
     <!-- File picker -->
     <string name="select_folder">Selecionar pasta</string>
-    <string name="select_file">Selecionar ficheiro</string>
+    <string name="select_file">Selecionar arquivo</string>
     <string name="confirm_storage_access_title">Confirmação de acesso ao armazenamento externo</string>
-    <string name="confirm_storage_access_text">Por favor escolha a pasta raiz do cartão SD no próximo ecrã para conceder acesso de escrita</string>
+    <string name="confirm_storage_access_text">Por favor escolha a pasta raíz do cartão SD no próximo passo para conceder acesso de escrita</string>
 
     <plurals name="items">
-        <item quantity="one">%1$d item</item>
-        <item quantity="other">%1$d itens</item>
+        <item quantity="one">%1$d ítem</item>
+        <item quantity="other">%1$d ítens</item>
     </plurals>
 
     <!-- Storages -->
     <string name="select_storage">Selecionar armazenamento</string>
     <string name="internal">Interno</string>
     <string name="sd_card">Cartão SD</string>
-    <string name="root">Raiz</string>
+    <string name="root">Raíz</string>
     <string name="wrong_root_selected">Pasta inválida, por favor selecione o cartão SD</string>
 
     <!-- File properties -->
     <string name="properties">Propriedades</string>
     <string name="path">Caminho</string>
-    <string name="items_selected">Itens selecionados</string>
-    <string name="direct_children_count">Itens nesta pasta</string>
-    <string name="files_count">Total de ficheiros</string>
+    <string name="items_selected">Ítens selecionados</string>
+    <string name="direct_children_count">Ítens nesta pasta</string>
+    <string name="files_count">Total de arquivos</string>
     <string name="resolution">Resolução</string>
     <string name="duration">Duração</string>
     <string name="artist">Artista</string>
@@ -95,18 +95,18 @@
 
     <!-- Color customization -->
     <string name="background_color">Cor de fundo</string>
-    <string name="text_color">Cor do tipo de letra</string>
+    <string name="text_color">Cor do texto</string>
     <string name="primary_color">Cor primária</string>
     <string name="restore_defaults">Restaurar predefinições</string>
     <string name="theme">Tema</string>
     <string name="light_theme">Tema claro</string>
     <string name="dark_theme">Tema escuro</string>
     <string name="custom">Personalizado</string>
-    <string name="save">Guardar</string>
+    <string name="save">Salvar</string>
     <string name="discard">Descartar</string>
     <string name="undo_changes">Desfazer alterações</string>
-    <string name="undo_changes_confirmation">Tem a certeza de que deseja desfazer as alterações?</string>
-    <string name="save_before_closing">Possui alterações não guardadas. Guardar antes de sair?</string>
+    <string name="undo_changes_confirmation">Tem certeza que deseja desfazer as alterações?</string>
+    <string name="save_before_closing">Possui alterações não salvass. Salvar antes de sair?</string>
 
     <!-- What's new -->
     <string name="whats_new">Novidades</string>
@@ -115,8 +115,8 @@
     <!-- Actionbar items -->
     <string name="delete">Apagar</string>
     <string name="rename">Renomear</string>
-    <string name="share">Partilhar</string>
-    <string name="share_via">Partilhar via</string>
+    <string name="share">Compartilhar</string>
+    <string name="share_via">Compartilhar via</string>
     <string name="select_all">Selecionar tudo</string>
 
     <!-- Sorting -->
@@ -124,9 +124,9 @@
     <string name="name">Nome</string>
     <string name="size">Tamanho</string>
     <string name="last_modified">Data de modificação</string>
-    <string name="date_taken">Data de obtenção</string>
+    <string name="date_taken">Data de criação</string>
     <string name="title">Título</string>
-    <string name="filename">Nome do ficheiro</string>
+    <string name="filename">Nome do arquivo</string>
     <string name="extension">Extensão</string>
     <string name="ascending">Ascendente</string>
     <string name="descending">Descendente</string>
@@ -138,26 +138,26 @@
     <string name="no">Não</string>
 
     <!-- Settings -->
-    <string name="settings">Definições</string>
+    <string name="settings">Configurações</string>
     <string name="customize_colors">Personalizar cores</string>
-    <string name="show_hidden">Mostrar ficheiros e pastas ocultos</string>
+    <string name="show_hidden">Mostrar arquivos e pastas ocultos</string>
 
     <!-- About -->
-    <string name="about">Acerca</string>
-    <string name="website_label">Mais aplicações Simple e código fonte em</string>
+    <string name="about">Sobre</string>
+    <string name="website_label">Mais aplicativos Simple e código-fonte em</string>
     <string name="email_label">Envie os seus comentários ou sugestões para</string>
-    <string name="more_apps_underlined"><u>Mais aplicações</u></string>
+    <string name="more_apps_underlined"><u>Mais aplicativos</u></string>
     <string name="third_party_licences_underlined"><u>Licenças de terceiros</u></string>
     <string name="invite_friends_underlined"><u>Convidar amigos</u></string>
-    <string name="share_text">Olá, experimenta %1$s em %2$s</string>
+    <string name="share_text">Olá, experimente %1$s em %2$s</string>
     <string name="invite_via">Convidar via</string>
     <string name="rate_us_underlined"><u>Avalie-nos na Play Store</u></string>
-    <string name="donate_underlined"><u>Donativos</u></string>
+    <string name="donate_underlined"><u>Doações</u></string>
     <string name="follow_us">Siga-nos:</string>
     <string name="copyright">V %1$s\nCopyright © Simple Mobile Tools %2$d</string>
 
     <!-- License -->
-    <string name="notice">Esta aplicação usa as seguintes bibliotecas de terceiros para facilitar a minha vida. Obrigado.</string>
+    <string name="notice">Este aplicativo usa as seguintes bibliotecas de terceiros para facilitar a minha vida. Obrigado.</string>
     <string name="third_party_licences">Licenças de terceiros</string>
     <string name="kotlin_title">Kotlin (linguagem de programação)</string>
     <string name="subsampling_title">Subsampling Scale Image View (ampliação de imagens)</string>
