--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -89,7 +89,7 @@
     <string name="artist">Artiste</string>
     <string name="album">Album</string>
     <string name="focal_length">Longueur de focale</string>
-    <string name="exposure_time">Durée d'exposition</string>
+    <string name="exposure_time">Durée d\'exposition</string>
     <string name="iso_speed">Sensibilité ISO</string>
     <string name="f_number">Ouverture</string>
 
