--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -133,7 +133,7 @@
     <string name="use_for_this_folder">Apenas para esta pasta</string>
 
     <!-- Confirmation dialog -->
-    <string name="proceed_with_deletion">Deseja realmente exluir?</string>
+    <string name="proceed_with_deletion">Deseja realmente excluir?</string>
     <string name="yes">Sim</string>
     <string name="no">Não</string>
 
