--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -25,6 +25,8 @@
     <string name="copy">Copy</string>
     <string name="move">Move</string>
     <string name="copy_move">Copy / Move</string>
+    <string name="copy_to">Copy to</string>
+    <string name="move_to">Move to</string>
     <string name="source">Source</string>
     <string name="destination">Destination</string>
     <string name="select_destination">Select destination</string>
