--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -25,6 +25,8 @@
     <string name="copy">Kopiuj</string>
     <string name="move">Przenieś</string>
     <string name="copy_move">Kopiuj / Przenieś</string>
+    <string name="copy_to">Copy to</string>
+    <string name="move_to">Move to</string>
     <string name="source">Żródło</string>
     <string name="destination">Cel</string>
     <string name="select_destination">Wybierz miejsce docelowe</string>
