--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -25,6 +25,8 @@
     <string name="copy">Kopírovať</string>
     <string name="move">Presunúť</string>
     <string name="copy_move">Kopírovať / presunúť</string>
+    <string name="copy_to">Kopírovať do</string>
+    <string name="move_to">Presunúť do</string>
     <string name="source">Zdroj</string>
     <string name="destination">Cieľ</string>
     <string name="select_destination">Vyberte cieľovú cestu</string>
