--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -25,6 +25,8 @@
     <string name="copy">复制</string>
     <string name="move">移动</string>
     <string name="copy_move">复制 / 移动</string>
+    <string name="copy_to">Copy to</string>
+    <string name="move_to">Move to</string>
     <string name="source">原路径</string>
     <string name="destination">目标</string>
     <string name="select_destination">选择目标</string>
