--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -25,6 +25,8 @@
     <string name="copy">コピー</string>
     <string name="move">移動</string>
     <string name="copy_move">コピー / 移動</string>
+    <string name="copy_to">Copy to</string>
+    <string name="move_to">Move to</string>
     <string name="source">元</string>
     <string name="destination">先</string>
     <string name="select_destination">宛先を選択</string>
