--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -158,6 +158,7 @@
     <string name="donate_underlined"><u>Darovať</u></string>
     <string name="follow_us">Nasledujte nás:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
+    <string name="donate_please">Čauko,\n\nzdá sa, že túto aplikáciu používaš už nejaký čas.\n\nVedel si, že nie je financovaná žiadnou veľkou firmou? Jej vývoj zaberá čas a nechcem pridávať reklamy, takže by tvoja pomoc bola vítaná.\n\nMôžeš ma podporiť jednak kúpou platenej aplikácie Simple Thank You, poslaním peňazí cez Paypal, alebo poslaním Bitcoinov.\n\nViac info na http://simplemobiletools.com/donate.\n\nĎakujem!</string>
 
     <!-- License -->
     <string name="notice">Táto aplikácia používa na uľahčenie práce nasledovné knižnice tretích strán. Ďakujeme.</string>
